--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
     <main class="main">
         @@include('html/about.html', {})
         @@include('html/do.html', {})
+        @@include('html/client.html', {})
     </main>
+    @@include('html/footer.html', {})
+    @@include('html/modal.html', {})
     <script src="js/app.min.js"></script>
 </body>
 
