--- a/src/html/about.html
+++ b/src/html/about.html
@@ -8,6 +8,6 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris
             tellus at. Posuere sollicitudin odio tellus elit.
         </p>
-        <button class="btn">See Our Project</button>
+        <button class="btn" data-modal>See Our Project</button>
     </div>
 </section>
