--- a/src/html/modal.html
+++ b/src/html/modal.html
@@ -1,17 +1,19 @@
 <form class="form">
     <div class="form__wrapper">
-        <div class="form__closed" data-close></div>
+        <div class="form__closed" data-close>
+            <img src="@img/close-icon.svg" alt="close">
+        </div>
         <h3 class="form__title">SEND US MESSAGE</h3>
         <label> Full Name
-            <input type="text" placeholder="Your Name">
+            <input type="text" name="name" placeholder="Your Name">
         </label>
         <label> Email
-            <input type="text" placeholder="Your Email">
+            <input type="text" name="fullName" placeholder="Your Email">
         </label>
         <label> Message
-            <textarea placeholder="Your Message"></textarea>
+            <textarea name="comment" placeholder="Your Message"></textarea>
         </label>
 
-        <button class="btn btn_form" type="submit">SUBMIT</button>
+        <button class="btn btn_form">SUBMIT</button>
     </div>
 </form>
