--- a/src/html/modal.html
+++ b/src/html/modal.html
@@ -1,19 +1,21 @@
-<form class="form">
-    <div class="form__wrapper">
-        <div class="form__closed" data-close>
-            <img src="@img/close-icon.svg" alt="close">
-        </div>
-        <h3 class="form__title">SEND US MESSAGE</h3>
-        <label> Full Name
-            <input type="text" name="name" placeholder="Your Name">
-        </label>
-        <label> Email
-            <input type="text" name="fullName" placeholder="Your Email">
-        </label>
-        <label> Message
-            <textarea name="comment" placeholder="Your Message"></textarea>
-        </label>
+<form class="modal">
+    <div class="modal__wrapper">
+        <div class="modal__inner">
+            <div class="modal__closed">
+                <img src="@img/close-icon.svg" alt="close" data-close>
+            </div>
+            <h3 class="modal__title">SEND US MESSAGE</h3>
+            <label> Full Name
+                <input type="text" name="name" placeholder="Your Name">
+            </label>
+            <label> Email
+                <input type="email" name="fullName" placeholder="Your Email">
+            </label>
+            <label> Message
+                <textarea type="text" name="comment" placeholder="Your Message"></textarea>
+            </label>
 
-        <button class="btn btn_form">SUBMIT</button>
+            <button class="btn btn_modal">SUBMIT</button>
+        </div>
     </div>
 </form>
